--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,3 +2,33 @@
 
 @import 'header'; 
 
+.main {
+    display: flex;
+    flex-direction: column;
+   
+
+    &__header {
+        display: flex;
+        justify-content: center;
+        font-family: "poppins", serif;
+        font-weight: 500px; 
+        font-size: 90px; 
+        line-height: 102px;
+        letter-spacing: -2px;
+    }
+
+    &__text {
+        display: flex;
+        justify-content: center;
+        font-family: "source sans 3", serif;
+        font-style: normal; 
+        font-size: 22px;
+        line-height: 33px;
+    }
+
+    &__image {
+        display: flex;
+        justify-content: center;
+
+    }
+}
