Styling desktop done
Styling desktop version done. Make responsive later

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,32 +3,33 @@
 @import 'header'; 
 
 .main {
+    margin: auto;
     display: flex;
     flex-direction: column;
-   
+    align-items: center;
 
     &__header {
-        display: flex;
-        justify-content: center;
+        margin-top: 80px; 
         font-family: "poppins", serif;
         font-weight: 500px; 
         font-size: 90px; 
         line-height: 102px;
         letter-spacing: -2px;
+        margin-bottom: 30px; 
     }
 
     &__text {
-        display: flex;
-        justify-content: center;
         font-family: "source sans 3", serif;
         font-style: normal; 
         font-size: 22px;
         line-height: 33px;
+        margin-bottom: 47px; 
     }
 
     &__image {
-        display: flex;
-        justify-content: center;
-
+        max-width: 864px;
+        width: 100%;
+        min-height: 328px;
+        height: 100%;
     }
 }
