--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -5,11 +5,14 @@
 }
 
 .header {
+    margin: auto; 
     margin-top: 62px;
-    display: flex;
-    justify-content: space-evenly; 
+    max-width: 864px;
+    width: 100;
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: space-between; 
     align-items: center;
-
 
     &__logo {
         font-family: "aldrich", serif;
@@ -38,3 +41,23 @@
         }
 }
 
+/* Tablet */
+@media screen and (max-width: 768px) {
+    .header__logo {
+        font-family: "baloo 2", serif; 
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 36px; 
+        letter-spacing: -0.24px;
+    }
+
+    .header {
+        margin-left: 20px;
+        margin-right: 20px; 
+    }
+}
+
+/* Mobile */
+@media screen and (max-width: 320px) {
+    
+}
