--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,7 +11,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    
 
     &__header {
         margin-top: 30px; 
@@ -48,8 +47,8 @@
 /* Tablet */
 @media screen and (max-width: 768px) {
     .main {
-        margin-left: 20px;
-        margin-right: 20px; 
+        max-width: 617px;
+        width: 100%;
     }
 
     .main__header {
@@ -58,25 +57,24 @@
         line-height: 82.8px;
         letter-spacing: -1.6px;
     }
+
     .main__info {
         margin-left: 20px;
         margin-right: 20px; 
     }  
-
 }
 
 /* Mobile */ 
 @media screen and (max-width: 320px) {
     .main {
-        margin-left: 20px;
-        margin-right: 20px; 
+        max-width: 256px;
+        width: 100%;
     }
 
     .main__header {
         font-size: 36px;
         line-height: 39.6px;
         letter-spacing: -0.8px;
-
     }
 
     .main__text {
